--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "1740daf6-a91b-4380-bbe9-d1452d0d2c14"
   },
   "newProjectRoot": "projects",
   "projects": {
